--- a/AT2.Rmd
+++ b/AT2.Rmd
@@ -21,15 +21,35 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(dplyr)      #used by Caret
 library(ggplot2)
+library(corrplot)
 
 setwd("~/Documents/brookstruong")
 
-
+import_train <- read_csv("AT2_credit_train_STUDENT.csv")
 ```
 
-## Including Plots
+23,101 observations over 17 variables
 
-You can also embed plots, for example:
+```{r Trainset, echo=TRUE}
+glimpse(import_train)
+
+import_train$default <- as.factor(import_train$default)
+```
+
+Looking at the dataset and how the `read_csv` imported the csv, we can understand that the date is imported as a <chr> string rather than <date>. 
+
+```{r Trainset, echo=TRUE}
+summary(import_train)
+```
+
+
+```{r Correlation Plot}
+cplot <- import_train %>%
+  select(-default)
+
+M <- cor(cplot)
+corrplot(M, type="upper")
+```
 
 ```{r pressure, echo=FALSE}
 plot(pressure)
