Adding our data cleaning RMD file so we can use the same Age, Marriage and Education cleaning on our data.

--- a/AT2DataCleaningAB.Rmd
+++ b/AT2DataCleaningAB.Rmd
@@ -4,7 +4,7 @@ author: "Alex Brooks"
 date: "1 October 2018"
 output: html_document
 ---
-
+#This is our data cleaning recipe
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
