--- a/AT2.Rmd
+++ b/AT2.Rmd
@@ -30,7 +30,7 @@ library(xgboost, quietly = T)
 setwd("~/Documents/brookstruong")
 
 train.raw <- read_csv("AT2_credit_train_STUDENT.csv")
-test.raw <- read_csv("AT2_credit_test_STUDENT.csv")
+val.raw <- read_csv("AT2_credit_test_STUDENT.csv")
 
 ```
 
@@ -249,7 +249,7 @@ train.imp <- train.imp[complete.cases(train.imp), ]
 ### Extreme Gradient Boosting
 
 
-```{r}
+
 ctrl <- trainControl(method = "repeatedcv",
                      repeats = 5,
                      verboseIter = F,
@@ -277,7 +277,13 @@ xgbFit <- train(
 
 save(xgbFit, file = 'xgbFit')
 
+saveRDS(xgbFit, file = 'xgbFit.rds')
+
+```{r}
+
+xgbFit <- readRDS("xgbFit.rds")
 ```
+
 
 
 ```{r}
@@ -302,7 +308,6 @@ histogram(~Y + N, train.Probs)
 mixture of ridge & lasso
 
 ```{r}
-
 ctrl <- trainControl(method = "repeatedcv",
                      repeats = 5,
                      verboseIter = F,
@@ -320,9 +325,14 @@ glmnetFit <- train(
     method='glmnet',
     tuneGrid = glmnetGrid
 )
-save(glmnetFit,file = 'glmnetFit')
 
+saveRDS(knnFit, file = 'glmnetFit.rds')
 ```
+
+```{r}
+glmnetFit <- readRDS("glmnetFit.rds")
+```
+
 
 
 ```{r}
@@ -351,7 +361,7 @@ histogram(~Y + N, train.glmnet.Probs)
 ## K-NN
 Supposed to be the worst.
 
-```{r}
+
 ctrl <- trainControl(method = "repeatedcv",
                      repeats = 5,
                      verboseIter = F,
@@ -369,8 +379,11 @@ knnFit <- train(
     tuneGrid = knnGrid
 )
 
-save(knnFit, file = 'knnFit')
+saveRDS(knnFit, file = 'knnFit.rds')
 
+```{r}
+
+knnFit <- readRDS("knnFit.rds")
 ```
 
 
@@ -388,7 +401,7 @@ histogram(~Y+N, train.Probs)
 
 ## SVM
 
-```{r}
+Code Chunk below
 ctrl <- trainControl(method = "repeatedcv",
                      repeats = 5,
                      verboseIter = F,
@@ -406,7 +419,10 @@ svmFit <- train(
 )
 
 save(svmFit, file = 'svmFit')
+saveRDS(svmFit, file = 'svmFit')
+```{r}
 
+readRDS("svmFit")
 ```
 
 ```{r}
@@ -425,10 +441,23 @@ histogram(~Y+N, train.Probs)
 ```{r}
 re <-
   resamples(x = list(
+    xgb = xgbFit,
     knn = knnFit,
     elastinet = glmnetFit,
     svm = svmFit
   ))
+
+```
+
+```{r}
+dotplot(re)
+bwplot(re)
+
+```
+
+```{r}
+difValues <- diff(re)
+dotplot(difValues)
 
 ```
 
@@ -452,4 +481,85 @@ round(prop.table(table(test.imp$default)),2)
 test.imp <- test.imp[complete.cases(test.imp), ]
 ```
 
+## Predict Results
 
+```{r}
+elastinetPred   <- predict(object = glmnetFit, newdata = test.imp)
+xgbPred         <- predict(object = xgbFit,    newdata = test.imp)
+knnPred         <- predict(object = knnFit,    newdata = test.imp)
+svmPred         <- predict(object = svmFit,    newdata = test.imp)
+
+```
+
+
+```{r}
+library(purrr)
+test.imp$default <- 0
+test.imp$default <- as.factor(test.imp$default)
+test.imp$default <- factor(test.imp$default, 
+                           levels =
+                             levels(train.imp$default))
+
+xtab <- table(xgbPred,test.imp$default)
+xgbCM <- confusionMatrix(xtab)
+
+xtab <- table(elastinetPred,test.imp$default)
+elastinetCM <- caret::confusionMatrix(xtab)
+
+xtab <- table(knnPred,test.imp$default)
+knnCM <-caret::confusionMatrix(xtab)
+
+xtab <- table(svmPred,test.imp$default)
+svmCM <-caret::confusionMatrix(xtab)
+
+
+CM_list <- list(xgbCM, elastinetCM, knnCM, svmCM)
+
+compiled_results <- tibble(
+    models = c('xgb','elastinet','knn','svm'),
+    accuracy = map_dbl(CM_list,~.x$overall[1]),
+    kappa = map_dbl(CM_list,~.x$overall[2]),
+    sensitivity = map_dbl(CM_list,~.x$byClass[1]),
+    specificity = map_dbl(CM_list,~.x$byClass[2]),
+    F1 = map_dbl(CM_list,~.x$byClass[7])
+)
+compiled_results %>% arrange(accuracy,kappa)
+```
+
+```{r}
+library(ggrepel)
+dotplot(reorder(models,accuracy)~accuracy,compiled_results, main = 'Accuracy (Test Set Performance)')
+ggplot(compiled_results, aes(F1, accuracy)) +
+    geom_point(color = 'blue',shape=1) +
+    geom_text_repel(aes(label = models),
+                    box.padding=unit(1,'lines'),
+                    max.iter=1e2,segment.size=.3,
+                    force=1) +
+    theme_bw()+
+    labs(x='F1',y='kappa', title='Kappa vs F1 (Test Set Performance)')
+
+```
+
+
+# Validation Set
+
+***
+```{r}
+val.imp <- val.raw
+
+#lakghd
+test.imp$SEX <- as.factor(test.imp$SEX)
+test.imp$EDUCATION <- as.factor(test.imp$EDUCATION)
+test.imp$MARRIAGE <- as.factor(test.imp$MARRIAGE)
+
+map_int(test.imp,~sum(is.na(.x)))
+
+round(prop.table(table(test.imp$default)),2)
+
+test.imp <- test.imp[complete.cases(test.imp), ]
+```
+
+```{r}
+
+
+```
